[package]
name = "orx-linked-list"
version = "4.0.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "A linked list implementation with unique features and an extended list of constant time methods providing high performance traversals and mutations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-linked-list/"
keywords = ["linked", "list", "doubly", "singly", "pinned"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-pseudo-default = { version = "2.0.0", default-features = false }
orx-pinned-vec = { path = "../orx-pinned-vec" }
orx-fixed-vec = { path = "../orx-fixed-vec" }
orx-split-vec = { path = "../orx-split-vec" }
orx-selfref-col = { path = "../orx-selfref-col" }
orx-iterable = { version = "1.2.0", default-features = false }

[dev-dependencies]
clap = { version = "4.5.27", features = ["derive"] }
criterion = "0.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
test-case = "3.3.1"

[features]
default = []
validation = []

[[bench]]
name = "doubly_shuffling_around"
harness = false
