[package]
name = "orx-linked-list"
version = "3.8.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "A linked list implementation with unique features and an extended list of constant time methods providing high performance traversals and mutations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-linked-list/"
keywords = ["linked", "list", "doubly", "singly", "pinned"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-iterable = { version = "1.3.0", default-features = false }
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-pinned-vec = "3.16.0"
orx-fixed-vec = "3.16.0"
orx-split-vec = "3.16.0"
orx-selfref-col = "2.8.0"


[dev-dependencies]
clap = { version = "4.5.35", features = ["derive"] }
criterion = "0.5"
rand = "0.9.0"
rand_chacha = "0.9.0"
test-case = "3.3.1"

[features]
default = []
validation = []

[[bench]]
name = "doubly_mutation_ends"
harness = false
