[package]
name = "orx-linked-list"
version = "3.10.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "A linked list implementation with unique features and an extended list of constant time methods providing high performance traversals and mutations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-linked-list/"
keywords = ["linked", "list", "doubly", "singly", "pinned"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-iterable = { version = "1.3.0", default-features = false }
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-pinned-vec = { version = "3.21.0", default-features = false }
orx-fixed-vec = { version = "3.22.0", default-features = false }
orx-split-vec = { version = "3.22.0", default-features = false }
orx-concurrent-iter = { version = "3.1.0", default-features = false }
orx-selfref-col = { version = "2.14.0", default-features = false }
orx-parallel = { version = "3.3.0", default-features = false, optional = true }

[dev-dependencies]
clap = { version = "4.5.38", features = ["derive"] }
criterion = "0.5.1"
rand = "0.9"
rand_chacha = "0.9"
rayon = { version = "1.10.0" }
test-case = "3.3.1"

[features]
default = ["orx-parallel"]
validation = []

[[bench]]
name = "doubly_mutation_ends"
harness = false
